// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WishListItem .changeImage() should change image 1`] = `
Array [
  Object {
    "image": "https://images-na.ssl-images-amazon.com/images/I/51LmtX5KPAL._SX406_BO1,204,203,200_.jpg",
    "name": "Chronicles of Narnia Box Set - C.S. Lewis",
    "price": 28.83,
  },
  Object {
    "op": "replace",
    "path": "/image",
    "value": "new image",
  },
  Object {
    "image": "new image",
    "name": "Chronicles of Narnia Box Set - C.S. Lewis",
    "price": 28.83,
  },
]
`;

exports[`WishListItem .changeName() should change name 1`] = `
Array [
  Object {
    "image": "https://images-na.ssl-images-amazon.com/images/I/51LmtX5KPAL._SX406_BO1,204,203,200_.jpg",
    "name": "Chronicles of Narnia Box Set - C.S. Lewis",
    "price": 28.83,
  },
  Object {
    "op": "replace",
    "path": "/name",
    "value": "new name",
  },
  Object {
    "image": "https://images-na.ssl-images-amazon.com/images/I/51LmtX5KPAL._SX406_BO1,204,203,200_.jpg",
    "name": "new name",
    "price": 28.83,
  },
]
`;

exports[`WishListItem .changePrice() should change price 1`] = `
Array [
  Object {
    "image": "https://images-na.ssl-images-amazon.com/images/I/51LmtX5KPAL._SX406_BO1,204,203,200_.jpg",
    "name": "Chronicles of Narnia Box Set - C.S. Lewis",
    "price": 28.83,
  },
  Object {
    "op": "replace",
    "path": "/price",
    "value": 12.34,
  },
  Object {
    "image": "https://images-na.ssl-images-amazon.com/images/I/51LmtX5KPAL._SX406_BO1,204,203,200_.jpg",
    "name": "Chronicles of Narnia Box Set - C.S. Lewis",
    "price": 12.34,
  },
]
`;

exports[`WishListItem .create() without image should default to empty string for image 1`] = `
Object {
  "image": "",
  "name": "Chronicles of Narnia Box Set - C.S. Lewis",
  "price": 28.83,
}
`;

exports[`WishListItem .create() without input should return expected values 1`] = `
Object {
  "image": "https://images-na.ssl-images-amazon.com/images/I/51LmtX5KPAL._SX406_BO1,204,203,200_.jpg",
  "name": "Chronicles of Narnia Box Set - C.S. Lewis",
  "price": 28.83,
}
`;

exports[`WishListItem create() without input should return "empty" item 1`] = `
Object {
  "image": "",
  "name": "",
  "price": 0,
}
`;
